# slispInterpreter

./: CMakeLists.txt  Vagrantfile  code_quality.sh  coverage.sh  environment.hpp  expression.cpp  expression.hpp  integration_test.py  interpreter.cpp  interpreter.hpp  slisp.cpp  test_interpreter.cpp  test_tokenize.cpp  test_types.cpp  tokenize.cpp  tokenize.hpp  unittests.cpp
build2/: CMakeCache.txt
guiImplementation/: CMakeLists.txt  canvas_widget.cpp  canvas_widget.hpp  environment.cpp  expression.cpp  expression.hpp  interpreter.cpp  interpreter.hpp  main_window.cpp  main_window.hpp  message_widget.cpp  message_widget.hpp  qgraphics_arc_item.cpp  qgraphics_arc_item.hpp  qt_interpreter.cpp  qt_interpreter.hpp  randName.patch  repl_widget.cpp  repl_widget.hpp  sldraw.cpp  test_gui.cpp  test_interpreter.cpp  test_message.cpp  test_tokenize.cpp  test_types.cpp  unittests.cpp
ref-binary/: slisp
tests/: test4.slp
